--- a/app/views/catalog/_show.html.erb
+++ b/app/views/catalog/_show.html.erb
@@ -19,6 +19,8 @@
       </div>
   </div>
   <div class="col-lg-4">
-    <%= render_document_sidebar_partial @document %>
+    <div class="row">
+      <%= render_document_sidebar_partial @document %>
+    </div>
   </div>
 </dl>
