--- a/app/views/catalog/_show_full_layer_description.html.erb
+++ b/app/views/catalog/_show_full_layer_description.html.erb
@@ -1,16 +1,9 @@
 <% document ||= @document %>
 
 <% if document.external_url.present? %>
-    <div class="card sidebar access">
-        <div class="card-header">
-          <%= t('geoblacklight.tools.access_data') %>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item" >
-                <%= link_to document.external_url, class: 'btn btn-primary' do %>
-                  <%= fa_icon "external-link", text: t('geoblacklight.tools.explore') + document.holding_institute, right: true %>
-                <% end %>
-            </li>
-        </ul>
-    </div>
+  <dd class="offset-md-3 offset-lg-0 col-12">
+    <%= link_to document.external_url do %>
+      <%= fa_icon "external-link", text: t('geoblacklight.tools.explore') + document.holding_institute, right: true %>
+    <% end %>
+  </dd>
 <% end %>
