--- a/app/views/catalog/_show_full_layer_description.html.erb
+++ b/app/views/catalog/_show_full_layer_description.html.erb
@@ -3,7 +3,7 @@
 <% if document.external_url.present? %>
   <dd class="offset-md-3 offset-lg-0 col-12">
     <%= link_to document.external_url do %>
-      <%= fa_icon "external-link", text: t('geoblacklight.tools.explore') + document.holding_institute, right: true %>
+      <%= fa_icon "external-link", text: t('geoblacklight.tools.explore') + document.holding_institute, right: false %>
     <% end %>
   </dd>
 <% end %>
