--- a/app/assets/stylesheets/geodisy.scss
+++ b/app/assets/stylesheets/geodisy.scss
@@ -342,3 +342,8 @@ hr.metadata-divider {
 .blacklight-icon-restricted {
     margin-left: 6px;
 }
+
+.search-query-form {
+    margin-left: auto;
+    margin-right: auto;
+}
