--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,338 @@
+/*
+*= require_tree .
+*= require_self
+*/
+
+$primary: rgb(214, 171, 0);
+$success: rgb(214, 171, 0);
+
+/** Setup link color **/
+$link-color: black;
+$link-decoration: underline;
+
+$link-hover-color: $primary;
+$link-hover-decoration: underline;
+
+a:hover, a:focus, a:active {
+    color: $primary ;
+}
+
+/** Top lunaris logo **/
+$logo-image: image_url('LUNARIS_logo_horizontal_reversed.svg') !default
+
+.navbar-logo {  /* The main logo image for the Blacklight instance */
+    background-size: 230px !important;
+    background-position-x: center !important;
+    background-position-y: center !important;
+    @if $logo-image {
+        background: transparent $logo-image no-repeat top left;
+    }
+}
+
+.nav-link,
+.nav > .dropdown > .dropdown-toggle {
+    color: #FAFAFA !important;
+}
+
+.nav-link:hover,
+.nav > .dropdown > .dropdown-toggle:hover {
+    color: #343a40 !important;
+    background-color: #FAFAFA;
+    text-decoration: underline;
+    border-radius: 5px 5px 5px 5px;
+}
+
+.dropdown-toggle {
+    padding: 8px;
+}
+
+.dropdown-menu > li > a {
+    display: block;
+    padding: 3px 20px;
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    background-color: $primary;
+    color: #FFFFFF !important;
+}
+
+#map_instructions {
+    text-align: left;
+    padding-top: 2px;
+    width: 504px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.leaflet-control-zoom-in:hover,
+.leaflet-control-zoom-out:hover,
+.leaflet-control-zoom-in:focus,
+.leaflet-control-zoom-out:focus {
+    color: $primary !important;
+}
+
+.blacklight-dc_description_s {
+    white-space: pre-line;
+}
+
+.facet-field-heading:hover {
+    background:#212529;
+    color:#f7f7f7 !important;
+}
+
+.facet-field-heading:hover > button {
+    color:#f7f7f7 !important;
+}
+
+input.feature-checkbox {
+    margin-left: 1px;
+}
+
+label.feature-label {
+    margin-left: 20px;
+}
+
+.catalog-section-divider {
+    border: 1px solid rgba(0,0,0,0.1);
+}
+
+.card-header {
+    font-weight: 500;
+}
+
+h2 > span {
+    font-size: 1.70rem;
+}
+
+ul.list-group.list-group-flush {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+hr.metadata-divider {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+}
+
+.document-additional-metadata.dl-invert {
+ dt {
+  font-weight: bold;
+ }
+}
+
+.card-header {
+    font-weight: 500;
+}
+
+.index_title {
+    margin-bottom: 0px;
+}
+
+.index_title > span > a:hover {
+    color: $primary;
+}
+
+.index_title > span > a {
+    color: black;
+    font-size: 1.1em;
+    margin-bottom: 0px;
+    overflow-x: inherit;
+    white-space: normal;
+}
+
+.index_creators {
+    font-style: italic;
+}
+
+.index_date {
+    font-style: italic;
+}
+
+/** Make sure the list of documents isn't shorter than the map **/
+.documents-list {
+    min-height: 400px;
+}
+
+.documents-list .document {
+    border-bottom: 1px solid #dee2e6;
+    margin-right: 15px;
+    margin-left: 28px;
+}
+
+.repo-icon {
+    width: 80px;
+    margin-bottom: 12px;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
+/** xs size breakpoint **/
+@media (min-width: 1px) and (max-width: 576px) {
+    /**
+    In mobile disable scrollbar and full height of list based on
+    screensize for mobile size.
+    **/
+    .documents-list {
+        max-height: 100%;
+        height: 100%;
+        overflow-y: auto;
+        width: 100%;
+    }
+
+    .documents-map {
+        width: 400px;
+    }
+
+    .repo-icon {
+        width: 60px;
+    }
+
+    .index-details {
+        width: calc(100% - 60px);
+    }
+}
+
+/** sm size breakpoint **/
+@media (min-width: 577px) and (max-width: 768px) {
+    /**
+    In mobile disable scrollbar and full height of list based on
+    screensize for mobile size.
+    **/
+    .documents-list {
+        max-height: 100%;
+        height: 100%;
+        overflow-y: auto;
+        width: 100%;
+    }
+
+    .documents-map {
+        width: 400px;
+    }
+
+    .repo-icon {
+        width: 60px;
+    }
+
+    .index-details {
+        width: calc(100% - 60px);
+    }
+
+}
+
+/** md size breakpoint **/
+@media (min-width: 769px) and (max-width: 992px) {
+    .documents-list {
+        max-height: 100%;
+        height: 100%;
+        overflow-y: auto;
+        width: 100%;
+    }
+
+    .documents-map {
+        width: 400px;
+    }
+
+    .repo-icon {
+        width: 60px;
+    }
+
+}
+
+/** lg size breakpoint **/
+@media (min-width: 993px) and (max-width: 1200px) {
+    .documents-list {
+        width: calc(100% - 424px);
+        max-height: calc(100vh - 280px);
+        overflow-y: scroll;
+    }
+
+    .documents-map {
+        width: 400px;
+    }
+}
+
+/** xl size breakpoint **/
+@media (min-width: 1201px) and (max-width: 1400px) {
+    .documents-list {
+        width: calc(100% - 424px);
+        max-height: calc(100vh - 280px);
+        overflow-y: scroll;
+    }
+
+    .documents-map {
+        width: 400px;
+    }
+}
+
+/** > xl size breakpoint **/
+@media (min-width: 1401px) {
+    .documents-list {
+        max-height: calc(100vh - 280px);
+        overflow-y: scroll;
+        width: calc(100% - 524px);
+    }
+
+    .documents-map {
+        width: 504px;
+    }
+
+    .container {
+      max-width: 95% !important;
+    }
+}
+
+[data-map="home"] {
+    width: 504px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.documents-map {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.more-info-area {
+    font-size: 0.9em;
+}
+
+.index-details {
+    width: calc(100% - 100px);
+}
+
+.page-links, .sort-dropdown > button, .sort-dropdown > button > span {
+    font-size: 13px;
+}
+
+.blacklight-icon-restricted {
+    margin-left: 6px;
+}
+
+.search-query-form {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.facets-heading {
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.search-details {
+    max-width: 100%;
+}
+
+.facet-content {
+    max-height: 230px;
+    overflow-y: auto;
+}
+
 @import 'blacklight';
 @import 'geoblacklight';
-@import 'geodisy';
 @import "font-awesome";
+
+@import 'bootstrap/functions';
+@import 'bootstrap/variables';
+@import 'bootstrap/mixins';
+@import "bootstrap";
+@import "footer";
