RDM-5892 Don't show mustard halo around clicked button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,11 @@ a:hover, a:focus, a:active {
     color: $primary ;
 }
 
+/** Disable mustard halo on focus of button **/
+.btn:focus {
+    box-shadow: none !important;
+}
+
 .dropdown-toggle {
     padding: 8px;
 }
