--- a/app/views/catalog/_document_split.html.erb
+++ b/app/views/catalog/_document_split.html.erb
@@ -1,7 +1,9 @@
 <div class='row'>
-  <div id="documents" class="documents-list">
+  <div class="centre-pane">
     <%= render 'sort_and_per_page' %>
-    <%= render documents, :as => :document %>
+    <div id="documents" class="documents-list">
+      <%= render documents, :as => :document %>
+    </div>
   </div>
   <%= content_tag :div, '', id: 'map', class: 'documents-map', aria: { label: t('geoblacklight.map.label') }, data: { map: 'index', 'catalog-path'=> search_catalog_path , 'map-bbox' => params[:bbox], basemap: geoblacklight_basemap, leaflet_options: leaflet_options } %>
 </div>
