Secondary colour changed to Alliance style and Access this Dataset btn

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 
 /** Override bootstrap variables **/
 $primary: rgb(214, 171, 0);
+$secondary: rgb(50, 50, 47);
 $success: rgb(214, 171, 0);
 
 /** Setup link color **/
