--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -6,6 +6,7 @@
 #map_instructions {
     text-align: left;
     padding-top: 2px;
+    max-width: calc(100vw - 100px);
     width: 504px;
     margin-left: auto;
     margin-right: auto;
@@ -19,6 +20,7 @@
 }
 
 [data-map="home"] {
+    max-width: calc(100vw - 100px);
     width: 504px;
     margin-left: auto;
     margin-right: auto;
