--- a/app/views/catalog/_facet_group.html.erb
+++ b/app/views/catalog/_facet_group.html.erb
@@ -1,6 +1,6 @@
 <% # main container for facets/limits menu -%>
 <% if has_facet_values? facet_field_names(groupname), @response %>
-<div id="facets<%= "-#{groupname}" unless groupname.nil? %>" class="facets sidenav facets-toggleable-md">
+<div id="facets<%= "-#{groupname}" unless groupname.nil? %>" class="facets sidenav facets-toggleable-lg">
 
   <div class="card facet-limit blacklight-search_details">
     <h3 class="card-header p-0 facet-field-heading" id="facet-search_details-header">
