--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -27,3 +27,7 @@ $logo-image: image_url('LUNARIS_logo_horizontal_reversed.svg') !default
     text-decoration: underline;
     border-radius: 5px 5px 5px 5px;
 }
+
+.navbar-search {
+    background-color: #F1F2F2;
+}
