--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -7,9 +7,18 @@
     white-space: pre-line;
 }
 
+.facets-checkbox {
+    margin-right: 5px;
+}
+
 .facets-heading {
     font-size: 1.1rem;
     font-weight: 600;
+}
+
+.facet-content {
+    max-height: 230px;
+    overflow-y: auto;
 }
 
 .facet-field-heading:hover {
@@ -21,9 +30,21 @@
     color:#f7f7f7 !important;
 }
 
-.facet-content {
-    max-height: 230px;
-    overflow-y: auto;
+.card.facet-limit.facet-limit-active {
+    /** Make the active filter card's borders match no filters chosen **/
+    border-left-color: rgba(0, 0, 0, 0.125) !important;
+    border-right-color: rgba(0, 0, 0, 0.125) !important;
+    border-top-color: rgba(0, 0, 0, 0.125) !important;
+    border-bottom-color: rgba(0, 0, 0, 0.125) !important;
+}
+
+.card-header.p-0.facet-field-heading {
+    /** Make the active filter colour match no filters chosen **/
+    background-color: white !important;
+}
+
+.card-header.p-0.facet-field-heading:hover {
+    background-color: $secondary !important;
 }
 
 .catalog-section-divider {
@@ -106,6 +127,22 @@ hr.metadata-divider {
 
 .more-info-area {
     font-size: 0.9em;
+}
+
+.centre-pane {
+    background-color: white;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.page-sidebar {
+    background-color: #E5E5E5;
+    padding-top: 8px;
+}
+
+.index-main {
+    background-color: #E5E5E5;
+    padding-top: 8px;
 }
 
 /** xs size breakpoint **/
