--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@ a:hover, a:focus, a:active {
     color: $primary ;
 }
 
+/** Default bootstrap uses black text on mustard **/
 .btn-primary {
     color: rgb(255, 255, 255) !important;
 }
