--- a/app/views/catalog/_facet_group.html.erb
+++ b/app/views/catalog/_facet_group.html.erb
@@ -24,7 +24,11 @@
       <%= groupname.blank? ? t('blacklight.search.facets.title') : t("blacklight.search.facets-#{groupname}.title") %>
     </h2>
 
-    <%= button_tag I18n.t("blacklight.search.facets.clear_all"), disabled: !has_active_facet?(facet_field_names(nil), @response), class: "btn btn-secondary" %>
+    <% if has_active_facet?(facet_field_names(nil), @response) %>
+      <%= link_to I18n.t("blacklight.search.facets.clear_all"), url_no_facets(controller.view_context), :class => "btn btn-secondary" %>
+    <% else %>
+      <%= button_tag I18n.t("blacklight.search.facets.clear_all"), :disabled => true, :class => "btn btn-secondary" %>
+    <% end %>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#facet-panel<%= "-#{groupname}" unless groupname.nil? %>-collapse" aria-controls="facet-panel<%= "-#{groupname}" unless groupname.nil? %>-collapse" aria-expanded="false" aria-label="Toggle facets">
       <span class="navbar-toggler-icon"></span>
