--- a/app/assets/stylesheets/leaflet/leaflet.css.erb
+++ b/app/assets/stylesheets/leaflet/leaflet.css.erb
@@ -1,4 +1,4 @@
-//= depend_on_asset 'layer.png'
+//= depend_on_asset 'layers.png'
 //= depend_on_asset 'layers-2x.png'
 //= depend_on_asset 'marker-icon.png'
 
