Changing the cluster colors to Alliance Yellow

--- a/app/assets/stylesheets/leaflet.prunecluster/LeafletStyleSheet.css
+++ b/app/assets/stylesheets/leaflet.prunecluster/LeafletStyleSheet.css
@@ -27,15 +27,15 @@
 }
 
 .prunecluster-small {
-	background-color: #b5e28c;
-	background-color: rgba(181, 226, 140, 0.6);
+	background-color: #d6ab00;
+	background-color: rgba(241, 211, 87, 0.6);
 }
 
 .prunecluster-small div {
 	width: 28px;
 	height: 28px;
-	background-color: #6ecc39;
-	background-color: rgba(110, 204, 57, 0.6);
+	background-color: #f0c20c;
+	background-color: rgba(240, 194, 12, 0.6);
 }
 
 .prunecluster-small div span {
@@ -43,8 +43,8 @@
 }
 
 .prunecluster-medium {
-	background-color: #f1d357;
-	background-color: rgba(241, 211, 87, 0.6);
+	background-color: #d6ab00;
+    background-color: rgba(241, 211, 87, 0.6);
 }
 
 .prunecluster-medium div {
@@ -53,15 +53,15 @@
 }
 
 .prunecluster-large {
-	background-color: #fd9c73;
-	background-color: rgba(253, 156, 115, 0.6);
+	background-color: #d6ab00;
+    background-color: rgba(241, 211, 87, 0.6);
 }
 
 .prunecluster-large div {
 	width: 34px;
 	height: 34px;
-	background-color: #f18017;
-	background-color: rgba(241, 128, 23, 0.6);
+	background-color: #f0c20c;
+	background-color: rgba(240, 194, 12, 0.6);
 }
 
 .prunecluster-large div span {
