--- a/app/assets/stylesheets/leaflet/leaflet.css.erb
+++ b/app/assets/stylesheets/leaflet/leaflet.css.erb
@@ -1,6 +1,6 @@
 //= depend_on_asset 'layers.png'
 //= depend_on_asset 'layers-2x.png'
-//= depend_on_asset 'gold-marker-icon.png'
+//= depend_on_asset 'marker-icon.png'
 
 /* required styles */
 
@@ -392,7 +392,7 @@
 
 /* Default icon URLs */
 .leaflet-default-icon-path {
-	background-image: url(<%= asset_url 'gold-marker-icon.png' %>);
+	background-image: url(<%= asset_url 'marker-icon.png' %>);
 	}
 
 
