--- a/app/assets/stylesheets/leaflet/leaflet.css.erb
+++ b/app/assets/stylesheets/leaflet/leaflet.css.erb
@@ -346,12 +346,12 @@
 	border-radius: 5px;
 	}
 .leaflet-control-layers-toggle {
-	background-image: url(<%= asset_url 'gold-layers.png' %>);
+	background-image: url(<%= asset_url 'layers.png' %>);
 	width: 36px;
 	height: 36px;
 	}
 .leaflet-retina .leaflet-control-layers-toggle {
-	background-image: url(<%= asset_url 'gold-layers-2x.png' %>);
+	background-image: url(<%= asset_url 'layers-2x.png' %>);
 	background-size: 26px 26px;
 	}
 .leaflet-touch .leaflet-control-layers-toggle {
