--- a/app/views/catalog/_lunaris_date_facet.html.erb
+++ b/app/views/catalog/_lunaris_date_facet.html.erb
@@ -1,14 +1,18 @@
-<div class="row mb-3">
-  <div class="col-5">
-    <input class="form-control" type="text">
+<%= form_tag @url, method: "get", role: 'filter-date', 'aria-label' => 'Apply date filtering' do %>
+
+  <%= render_hash_as_hidden_fields(params.except(:from, :to)) %>
+  <div class="row mb-3">
+    <div class="col-5">
+    <input class="form-control" name="from" type="text" value="<%= params["from"] %>">
+    </div>
+    <div class="col-2">
+      to
+    </div>
+    <div class="col-5">
+      <input class="form-control" name="to" type="text" value="<%= params["to"] %>">
+    </div>
   </div>
-  <div class="col-2">
-    to
+  <div class="row">
+    <button type="submit" class="offset-4 col-4 btn btn-primary">Apply</button>
   </div>
-  <div class="col-5">
-    <input class="form-control" type="text">
-  </div>
-</div>
-<div class="row">
-  <button class="offset-4 col-4 btn btn-primary">Apply</button>
-</div>
+<% end %>
