RDM-5762 Add bootstrap datepicker to pick to and from dates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,6 +83,8 @@ label.feature-label {
 @import 'map';
 /** Css rules for search results **/
 @import 'index';
+/** Css rules for selecting date widget **/
+@import 'lunaris_date_facet';
 
 @import 'blacklight';
 @import 'geoblacklight';
