--- a/app/views/catalog/_facet_group.html.erb
+++ b/app/views/catalog/_facet_group.html.erb
@@ -23,8 +23,8 @@
       <%= groupname.blank? ? t('blacklight.search.facets.title') : t("blacklight.search.facets-#{groupname}.title") %>
     </h2>
 
-    <% if has_active_facet?(facet_field_names(nil), @response) %>
-      <%= link_to I18n.t("blacklight.search.facets.clear_all"), url_no_facets(controller.view_context), :class => "btn btn-secondary" %>
+    <% if has_active_facet?(facet_field_names(nil), @response) || has_any_search_filter?(params[:q], facet_field_names(nil)) %>
+      <%= link_to I18n.t("blacklight.search.facets.clear_all"), url_no_facets(controller.view_context, facet_field_names(nil)), :class => "btn btn-secondary" %>
     <% else %>
       <%= button_tag I18n.t("blacklight.search.facets.clear_all"), :disabled => true, :class => "btn btn-secondary" %>
     <% end %>
